# nonebot-dicepp

./: .coveragerc  .dockerignore  .env  .env.dev  .env.example  .env.linux  .gitignore  Dockerfile  Dockerfile.standalone  Dockerfile_pi  LICENSE  Makefile  README.md  bot.py  config.template.json  conftest.py  docker-compose.yml  pyproject.toml  pyproject.toml.bak  requirements.txt  requirements.txt.bak  standalone_bot.py
.docker/: Dockerfile  Dockerfile_pi  docker-compose.yml
.github/workflows/: ci.yml  sync2gitee.yml
.trae/: rules  skills
.trae/rules/: agent.md
_build/: modules.html  py-modindex.html  searchindex.js
_build/.doctrees/: bot.doctree  environment.pickle
_build/_sources/autoapi/: index.rst.txt
config/: global.json  secrets.json.example
config/bots/: _template.json
config/personas/: default.json  qiqi.local.json
content/characters/: default.yaml
docs/: .buildinfo  AST_ENGINE_MIGRATION.md  DATA_LAYER.md  DEPLOY.md  PR_CHECKLIST.md  README.md  TODO.md  bot.html  config-system.md  deploy.md  genindex.html  index.html  index.md  objects.inv  search.html  standalone.md  开发文档位于src.txt
docs/.doctrees/: index.doctree  modules.doctree
docs/.doctrees/autoapi/: index.doctree
docs/_modules/: index.html
docs/_sources/: bot.rst.txt  index.rst.txt  modules.rst.txt
docs/agent/: CLAUDE.md  link-to-claude.bat  link-to-claude.sh  link-to-cursor.bat  link-to-trae.bat
docs/agent/agents/: designer.md  leader.md  programmer.md  qa.md  reviewer.md
docs/agent/rules/: CLAUDE.md  ai-usage.md  dicepp.md
docs/autoapi/: index.html
docs/autoapi/DicePP/: index.html
docs/dicepp/: README.md  command_catalog.md  command_runtime.md  data_layer.md  dev_recipes.md  roll_engine.md  standalone_runtime.md  system_overview.md
docs/dicepp/persona/: README.md  architecture.md  character_card.md  config-example.md  debug-commands.md  deploy.md  implementation.md  overview.md  review-260410-1927-persona-phase2.md
openspec/: README.md  config.yaml
openspec/changes/code-optimization/: tasks.md
openspec/changes/dice-hub-web-registration/: proposal.md
openspec/changes/nonebot2-modernization/: design.md  proposal.md  tasks.md
openspec/changes/phase1-test-infra/: design.md  proposal.md  tasks.md
openspec/changes/phase2-test-arch/: proposal.md  tasks.md
openspec/changes/phase3-module-tests/: tasks.md
openspec/changes/phase4-ci-cd/: design.md  proposal.md  tasks.md
scripts/: capture_baseline.py
scripts/deploy/linux/: _common.sh  logs.sh  restart.sh  setup.sh  start.sh  status.sh  stop.sh  update.sh
scripts/deploy/windows/: install_deps.bat  start.bat  start_dev.bat
scripts/dev/: install.bat
scripts/migrate/: manage_migrations.bat  manage_migrations.py  migrate_log_data.py  scan_all_data_fields.py  scan_char_dnd.py
scripts/test/: run_build_test.bat  run_integration_test.bat  run_unit_test.bat  test_bot.py  verify_share_message.py
src/plugins/DicePP/: __init__.py  conftest.py
templates/: config.gocqhttp.yml  docker-compose.dicepp.yml  docker-compose.gocqhttp.yml
tests/: __init__.py  conftest.py  fs_utils.py
tests/adapter/: test_standalone_bot_webchat.py  test_standalone_proxy.py  test_web_chat_adapter.py
tests/core/command/: test_command.py  test_parse_layer.py  test_snapshot_compat.py
tests/core/config/: test_config_loader.py  test_persona.py  test_reload_command.py
tests/core/data/: test_database.py  test_initiative.py  test_karma.py  test_log_repository.py  test_migrations.py  test_models.py  test_query_store.py  test_repository.py
tests/e2e/: conftest.py  test_combat_flow.py
tests/e2e/persona/: README.md  test_character_lifecycle_real_llm.py
tests/fixtures/: __init__.py  coc_character.json  dnd_character.json  tarot_deck.json
tests/helpers/: assert_helpers.py  sequence_runtime.py
tests/integration/: bot_integration_runner.py
tests/integration/persona/: test_character_day_simulation.py  test_command.py  test_orchestrator_chat.py  test_orchestrator_lifecycle.py
tests/module/character/: test_character_command.py
tests/module/common/: test_common.py  test_log_command.py  test_mode_parse_baseline.py
tests/module/deck/: test_deck.py
tests/module/dice_hub/: test_manager_tick.py
tests/module/fastapi/: test_standalone_api.py
tests/module/initiative/: test_initiative_command.py
tests/module/misc/: test_jrrp_determinism.py  test_misc.py
tests/module/persona/: test_phase4.py
tests/module/query/: test_query.py  test_query_sql_builder.py
tests/module/roll/: bench_rexp_sampling.py  test_ast_error_semantics.py  test_ast_evaluator.py  test_ast_integration.py  test_ast_parser.py  test_ast_trace_errors_limits.py  test_compatibility_corpus.py  test_coverage_analysis.md  test_default_ast_path.py  test_karma.py  test_modifier.py  test_result.py  test_rexp_sampling_optimization.py  test_roll_commands.py  test_roll_parse_args.py  test_roll_parse_baseline.py
tests/snapshots/: cmd_r_compat.json
tests/unit/llm/: test_llm_client.py  test_llm_memory.py
tests/unit/persona/: test_character.py  test_character_life.py  test_character_life_phase1.py  test_character_life_phase2.py  test_chat_with_tools.py  test_context_builder.py  test_data_store.py  test_data_store_daily_event.py  test_decay_calculator.py  test_decay_incremental.py  test_decay_lazy.py  test_delayed_task_queue.py  test_event_agent.py  test_generate_share_message.py  test_group_activity_store.py  test_llm_router_quota.py  test_models.py  test_observation_buffer.py  test_orchestrator_context_builder.py  test_orchestrator_tick.py  test_phase3_features.py  test_phase7a.py  test_privacy.py  test_scheduler.py  test_scheduler_context.py  test_scoring_agent.py  test_tick_singleflight.py
tests/unit/shell/: test_bot_runner.py  (+1 more)
tests/utils/: __init__.py  test_cq_code.py  test_data.py  test_frozen.py  test_string.py  test_time.py
tools/: check_time_parse.py  migrate_log_data.py  scan_all_data_fields.py  scan_char_dnd.py
tools/dev/: install.bat  run.bat  test.bat
tools/docs/: DEPLOY.md
(+653 files in other folders)
