[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── 依赖声明（供 uv sync / pip install 使用）──────────────────────────────────
[project]
name = "dicepp"
version = "2.0.0"
description = "DicePP NoneBot2 Plugin"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "nonebot2>=2.4.0",
    "nb-cli>=1.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "openpyxl>=3.0.9",
    "rsa>=4.8",
    "gitpython>=3.1.40",
    "python-docx>=0.8.11",
    "lxml>=4.9.2",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.100.0",
    "zhconv>=1.4.3",
    "psutil>=5.9.0",
    "requests>=2.28.0,<2.32.0",
    "urllib3>=1.21.1,<2.0.0,!=1.25.0,!=1.25.1",
    "charset-normalizer>=3.0.0,<3.4.0",
    "chardet>=3.0.2,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.uv]
dependency-metadata = []

# ── nonebot 配置 ────────────────────────────────────────────────────────────
[nonebot.plugins]
plugins = []
plugin_dirs = ["src/plugins"]

[tool.nonebot]
plugin_dirs = ["src/plugins"]

# ── pytest 配置 ─────────────────────────────────────────────────────────────
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []


[tool.nonebot.adapters]
"@local" = []
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/plugins/DicePP"]
python_files = ["unit_test.py", "test_*.py", "*_test.py"]
python_classes = ["MyTestCase", "Test*"]
python_functions = ["test*"]
addopts = "--tb=short"
markers = [
    "unit: Unit tests for individual modules",
    "integration: Integration tests for command flow",
    "slow: Tests that take a long time to run",
    "karma: Tests for karma system",
    "log: Tests for logging system",
]

