[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── 依赖声明（供 uv sync / pip install 使用）──────────────────────────────────
[project]
name = "dicepp"
version = "3.0.0"
description = "DicePP NoneBot2 Plugin"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.0",
    "aiohttp>=3.9",
    "nonebot2>=2.4.0",
    "nb-cli>=1.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "openpyxl>=3.0.9",
    "rsa>=4.8",
    "gitpython>=3.1.40",
    "python-docx>=0.8.11",
    "lxml>=4.9.2",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.100.0",
    "zhconv>=1.4.3",
    "psutil>=5.9.0",
    "requests>=2.28.0,<2.32.0",
    "urllib3>=1.21.1,<2.0.0,!=1.25.0,!=1.25.1",
    "charset-normalizer>=3.0.0,<3.4.0",
    "chardet>=3.0.2,<6.0.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19.0",
    "lark>=1.1.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pyinstaller>=6.0",
]

[tool.uv]
dependency-metadata = []

# ── nonebot 配置 ────────────────────────────────────────────────────────────
[nonebot.plugins]
plugins = []
plugin_dirs = ["src/plugins"]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []

[tool.nonebot.adapters]
"@local" = []

# ── pytest 配置 ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["unit_test.py", "test_*.py", "*_test.py"]
python_classes = ["MyTestCase", "Test*"]
python_functions = ["test*"]
addopts = "--tb=short"
markers = [
    "unit: Unit tests for individual modules",
    "integration: Integration tests for command flow",
    "slow: Tests that take a long time to run",
    "karma: Tests for karma system",
    "log: Tests for logging system",
]

# ── coverage 配置（替代 .coveragerc）─────────────────────────────────────────
[tool.coverage.run]
source = ["src/plugins/DicePP"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true